# dg-query

./: .bazelrc  .gitignore  .goreleaser.yaml  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  build.md  deps.bzl  go.mod  go.mod.MODULE.bazel  go.sum  main.go  main_perf_test.go  main_test.go  run.sh
.buildkite/: build-bazel-docker.sh  build-bazel-remote.sh  build-bazel-rules-img.sh  build-bazel.sh  build-go.sh  pipeline.yml
.github/workflows/: release.yml
build-support/: create-bazelrc-ci.sh  workspace-status.sh
cmd/: BUILD.bazel  components.go  components_test.go  cycles.go  cycles_test.go  dependencies.go  dependencies_test.go  dependents.go  dependents_test.go  dg.go  leaves.go  leaves_test.go  metrics.go  metrics_test.go  paths.go  paths_test.go  root.go  roots.go  roots_test.go  simplify.go  simplify_test.go  stats.go  subgraph.go  subgraph_test.go
defs/: constants.bzl  defs.bzl
examples/: dg-linked-list.json  dg-real.json
scripts/: codecov.sh
tests/: BUILD.bazel  defs.bzl  main_cli_test.go  main_dependents_test.go  main_metrics_test.go  main_perf_test.go  main_test.go
tests/examples/: dg-transitive-reduction.json  dg.json
