load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(name = "gazelle")

go_library(
    name = "dg-query_lib",
    srcs = ["main.go"],
    importpath = "github.com/AlexTereshenkov/dg-query",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "dg-query",
    embed = [":dg-query_lib"],
    visibility = ["//visibility:public"],
)
