load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "TOOLS_NOGO", "go_binary", "go_library", "nogo")

gazelle(name = "gazelle")

buildifier(
    name = "buildifier",
    lint_mode = "fix",
    mode = "fix",
)

buildifier(
    name = "buildifier-check",
    lint_mode = "warn",
    mode = "diff",
)

nogo(
    name = "nogo",
    visibility = ["//visibility:public"],
    deps = TOOLS_NOGO,
)

go_library(
    name = "dg-query_lib",
    srcs = ["main.go"],
    importpath = "github.com/AlexTereshenkov/dg-query",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "dg-query",
    embed = [":dg-query_lib"],
    visibility = ["//visibility:public"],
)
