module(
    name = "workspace",
    repo_name = "com_github_alextereshenkov_dgquery",
)

bazel_dep(name = "rules_go", version = "0.49.0")
bazel_dep(name = "gazelle", version = "0.37.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.0.1")

# this is to manage third-party dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# https://github.com/bazel-contrib/rules_go/blob/master/docs/go/core/bzlmod.md
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# using the same version as in `go.mod`
go_sdk.download(version = "1.22.0")

# this is to enable nogo static analysis checker and being able to run arbitrary Go commands
go_sdk.nogo(nogo = "//:nogo")

# all *direct* Go dependencies of the module have to be listed explicitly here
use_repo(
    go_deps,
    "com_github_spf13_cast",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
)

# to add support for `--spawn_strategy=docker`
register_execution_platforms("//platforms:docker")
