load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd",
    srcs = [
        "dependencies.go",
        "dependents.go",
        "dg.go",
        "metrics.go",
        "paths.go",
        "root.go",
    ],
    importpath = "github.com/AlexTereshenkov/dg-query/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_test(
    name = "cmd_test",
    srcs = [
        "dependencies_test.go",
        "dependents_test.go",
        "metrics_test.go",
        "paths_test.go",
    ],
    embed = [":cmd"],
    deps = ["@com_github_stretchr_testify//assert"],
)
