load("@rules_go//go:def.bzl", "go_library", "go_test")

# this is to be able to include Go sources into the sh_binary target generating HTML report
exports_files(
    glob(["*.go"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "exported_go_files",
    srcs = glob(["*.go"]),
    visibility = ["//visibility:public"],
)

go_library(
    name = "cmd",
    srcs = [
        "cycles.go",
        "dependencies.go",
        "dependents.go",
        "dg.go",
        "metrics.go",
        "paths.go",
        "root.go",
        "subgraph.go",
    ],
    importpath = "github.com/AlexTereshenkov/dg-query/cmd",
    visibility = ["//visibility:public"],
    # This sets contents for variable `Version` in the `root.go` file;
    # https://bazel.build/docs/user-manual#workspace-status
    x_defs = {"Version": "{STABLE_GIT_COMMIT}"},
    deps = [
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_test(
    name = "cmd_test",
    srcs = [
        "cycles_test.go",
        "dependencies_test.go",
        "dependents_test.go",
        "metrics_test.go",
        "paths_test.go",
        "subgraph_test.go",
    ],
    embed = [":cmd"],
    tags = ["unit"],
    deps = ["@com_github_stretchr_testify//assert"],
)
