load("@io_bazel_rules_go//go:def.bzl", "go_test")

# gazelle:prefix github.com/AlexTereshenkov/dg-query

go_test(
    name = "dg-query_test",
    srcs = [
        "main_cli_test.go",
        "main_perf_test.go",
    ],
    data = ["examples/dg.json"],
    deps = [
        "//cmd",
        "@com_github_stretchr_testify//assert",
    ],
)
